@@ -111,8 +111,13 @@ dependent on the core refactor.</p>
 <p>Proposed items:</p>
 
 <ul>
-<li><a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=82195">82195</a>: Refactor org.eclipse.cdt.rpm.core (P1)</li>
 <li><a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=82196">82196</a>: Move propertypage plug-in to org.eclipse.cdt.rpm.ui (P3)</li>
+</ul>
+
+<p>Completed items:</p>
+
+<ul>
+<li><a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=82195">82195</a>: Refactor org.eclipse.cdt.rpm.core (P1)</li>
 <li><a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=82197">82197</a>: Add RPM project nature (P3)</li>
 </ul>
 
@@ -160,8 +165,13 @@ dependent on the core refactor.</p>
 
 <ul>
 <li><a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=82174">82174</a>: Automated builds for Eclipse-RPM and Eclipse-OProfile (P1)</li>
-<li><a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=82176">82176</a>: Implement unit tests (P2)</li>
 <li><a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=82177">82177</a>: Update and publish manual test plans (P2)</li>
+</ul>
+
+<p>Completed items:</p>
+
+<ul>
+<li><a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=82176">82176</a>: Implement unit tests (P2)</li>
 </ul>
 
 <p></p>
