@@ -1,3 +1,7 @@
+2005-05-18  Jeremy Handcock  <handcock@redhat.com>
+
+	* planning/eclipse-rpm-3_0.html: Update completed items.
+
 2005-01-11  Jeremy Handcock  <handcock@redhat.com>
 
 	* downloads.html: Add nightly builds.
